--- a/Movie_application.html
+++ b/Movie_application.html
@@ -6,6 +6,8 @@
     <meta name="creator" content="Gilmore & Harris">
     <meta name="subject" content="Fetch, API">
     <meta name="description" content=" Building a single page movie application (SPA) ">
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Personal StyleSheet -->
     <link type="text/css" href="css/Movie_application.css" rel="stylesheet">
     <!-- JQuery -->
@@ -20,4 +22,6 @@
     <h1> Movie Palace</h1>
 
 </body>
+<!-- BOostrap JS ----->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </html>
