--- a/Movie_application.html
+++ b/Movie_application.html
@@ -19,9 +19,34 @@
 </head>
 <body>
 
+<header class="bg-light shadow">
     <h1> Movie Palace</h1>
+</header>
+
+    <div id='post' class=""></div>
+
 
 </body>
-<!-- BOostrap JS ----->
+<!-- Boostrap JS ----->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+<script>
+    $.ajax('https://cuboid-standing-scribe.glitch.me/movies')
+        .done(onSuccess)
+
+    function onSuccess(data) {
+        console.log(data);
+        for (var x = 0; x < data.length;x++){
+            $('#post').append(
+                "<section class='bg-dark text-white m-3 w-25 '>" +
+                "<h4 class='p-0 m-0'>"+data[x].title +"</h4>"+
+                "<p class='p-0 m-0'>"+data[x].rating +"</p>"+
+                "<p class='p-0 m-0'>"+data[x].year +"</p>"+
+                "<p class='p-0 m-0'>"+data[x].genre +"</p>"+
+                "<p class='p-0 m-0'>"+data[x].director +"</p>"+
+                "</section>"
+            )
+        }
+    }
+</script>
 </html>
