--- a/Movie_application.html
+++ b/Movie_application.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="creator" content="Gilmore & Harris">
     <meta name="subject" content="Fetch, API">
-    <meta name="description" content=" Building a single page movie application (SPA) ">
+    <meta name="description" content=" Building a single page movie application (SPA). with a glitch api ">
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Personal StyleSheet -->
