--- a/Movie_application.html
+++ b/Movie_application.html
@@ -23,6 +23,29 @@
     <h1> Movie Palace</h1>
 </header>
 
+<form class="border w-50 mx-auto bg-light shadow p-3">
+    <div class="form-group">
+        <label  class="border p-2 mx-auto" for="movieTitle">Title</label>
+        <input type="text" class="form-control" id="movieTitle" aria-describedby="movieTitle" placeholder="Enter Movie Title">
+    </div>
+    <div class="form-group">
+        <label for="ratingMovie">Rating</label>
+        <input type="text" class="form-control" id="ratingMovie" placeholder="Rating">
+    </div>
+    <div class="form-group">
+        <label for="yearMovie">Year</label>
+        <input type="text" class="form-control" id="yearMovie" placeholder="Year">
+    </div>
+    <div class="form-group">
+        <label for="genreMovie">Genre</label>
+        <input type="text" class="form-control" id="genreMovie" placeholder="Genre">
+    </div>
+    <div class="form-group">
+        <label for="directorMovie">Director</label>
+        <input type="text" class="form-control" id="directorMovie" placeholder="Director">
+    </div>
+    <button type="submit" class="btn btn-primary mt-3">Submit</button>
+</form>
 
 
 
