--- a/Movie_application.html
+++ b/Movie_application.html
@@ -57,24 +57,23 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 <script>
-    $.ajax('https://cuboid-standing-scribe.glitch.me/movies')
-        .done(onSuccess)
-
-    function onSuccess(data) {
-        console.log(data);
-        for (var x = 0; x < data.length;x++){
-            $('#post').append(
-                "<section class='bg-dark text-white m-3  '>" +
-                "<h4 class='p-0 m-0'>"+data[x].title +"</h4>"+
-                "<p class='p-0 m-0'>"+data[x].rating +"</p>"+
-                "<p class='p-0 m-0'>"+data[x].year +"</p>"+
-                "<p class='p-0 m-0'>"+data[x].genre +"</p>"+
-                "<p class='p-0 m-0'>"+data[x].director +"</p>"+
-                "<button>Edit</button>"+
-                "<button>Delete</button>"+
-                "</section>"
-            )
-        }
-    }
+    fetch('https://cuboid-standing-scribe.glitch.me/movies').then( response => {
+        response.json().then( movies => {
+            movies.forEach( movie => {
+                // do something with each user object...
+                $('#post').append(
+                    "<section class='bg-dark text-white m-3  '>" +
+                    "<h4 class='p-0 m-0'>"+movie.title +"</h4>"+
+                    "<p class='p-0 m-0'>"+movie.rating +"</p>"+
+                    "<p class='p-0 m-0'>"+movie.year +"</p>"+
+                    "<p class='p-0 m-0'>"+movie.genre +"</p>"+
+                    "<p class='p-0 m-0'>"+movie.director +"</p>"+
+                    "<button>Edit</button>"+
+                    "<button>Delete</button>"+
+                    "</section>"
+                )
+            });
+        });
+    });
 </script>
 </html>
