--- a/Movie_application.html
+++ b/Movie_application.html
@@ -23,22 +23,29 @@
     <h1> Movie Palace</h1>
 </header>
 
-<form id="movie-form" class="border w-50 mx-auto bg-light shadow p-3" action="#" method="get">
+<form id="movie-form" class="border w-50 mx-auto bg-light shadow p-3">
     <div class="form-group">
         <label  class="border p-2 mx-auto" for="movieTitle">Title</label>
-        <input type="text" class="form-control" id="movieTitle" aria-describedby="movieTitle"
-               placeholder="Enter Movie Title" required>
-        <label for="ratingMovie">Rating</label>
-        <input type="text" class="form-control" id="ratingMovie" placeholder="Rating">
-
-        <label for="yearMovie">Year</label>
-        <input type="text" class="form-control" id="yearMovie" placeholder="Year">
-        <label for="genreMovie">Genre</label>
-        <input type="text" class="form-control" id="genreMovie" placeholder="Genre">
-        <label for="directorMovie">Director</label>
-        <input type="text" class="form-control" id="directorMovie" placeholder="Director">
+        <input type="text" class="form-control" id="movieTitle"  required>
     </div>
-    <button type="submit" class="btn btn-primary mt-3">Submit</button>
+    <div class="form-group">
+        <label for="ratingMovie">Rating</label>
+        <input type="number" class="form-control" id="ratingMovie">
+    </div>
+    <div class="form-group">
+        <label for="yearMovie">Year</label>
+        <input type="number" class="form-control" id="yearMovie">
+    </div>
+    <div class="form-group">
+        <label for="genreMovie">Genre</label>
+        <input type="text" class="form-control" id="genreMovie">
+    </div>
+    <div class="form-group">
+        <label for="directorMovie">Director</label>
+        <input type="text" class="form-control" id="directorMovie">
+    </div>
+    <button type="submit" id="submitButton"  class="btn btn-primary mt-3">Submit</button>
+    <button type="submit" id="saveButton" class="btn btn-warning d-none mt-3">Save</button>
 </form>
 
 
@@ -46,70 +53,59 @@
     <div id='post' class="d-flex overflow-auto py-5"></div>
 
 
-</body>
-<!-- Boostrap JS ----->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <script>
-
-    //----- CRUD Fetch
     //--- Special Variables
     const URL = 'https://cuboid-standing-scribe.glitch.me/movies';
+
+
+    // Creates each post of every movie in the JSON
+    const outPutMovie = '';
+    const renderPost = (posts) => {posts.forEach(movie => {
+        outputMovie = `<section class="bg-dark text-white m-3 p-3 h-fit-content" d id="mainContainer">
+                    <img src="${movie.poster}" class="rounded">\
+                        <h4 class="pt-3 text-capitalize movieTitle">${movie.title}</h4>
+                        <p class="p-0 m-0 movie-header year">${movie.year}</p>
+                        <p class="p-0 m-0 rating">${movie.rating} Stars</p>
+                        <p class="p-0 m-0 genre">${movie.genre}</p>
+                        <p class="p-0 m-0 director">${movie.director}</p>
+                        <button  class="btn btn-primary" data-id=${movie.id} id="edit-post">Edit</button>
+                        <button class="btn btn-secondary" data-id=${movie.id}  id="delete-post">Delete</button>
+            </section>`
+        $('#post').append(outputMovie);
+    })}
+
     //--- READ ----
     fetch(URL)
-        .then( response => {
-            response.json()
-                .then(movies => {
-//Going to run through each movie
-                    movies.forEach(movie => {
-//The Container for each movie
-                        $('#post').append(
-                            `<section class='bg-dark text-white m-3 p-3 h-fit-content' id="mainContainer">
-                            <img src="${movie.poster}" class="rounded">
-                            <section class="">
-                            <h4 class='pt-3 text-capitalize'>${movie.title}</h4>
-                            <p class='p-0 m-0'>${movie.year}</p>
-                            <p class='p-0 m-0'>${movie.rating} Stars</p>
-                            <p class='p-0 m-0'>${movie.genre}</p>
-                            <p class='p-0 m-0'>${movie.director}</p>
-                            <button data-id="${movie.id}" class="btn btn-primary">Edit</button>
-                            <button data-id="${movie.id}" class="btn btn-warning d-none">Save</button>
-                            <button data-id="${movie.id}" class="btn btn-secondary">Delete</button>
-                        </section>`
-                        )
-                    })
-                })
-        })
-    $
-    //--- CREATE ----
-    function create(){
-        //----- This is going to add the content to the list and update it live
-        $('[type="submit"]').click((e)=>{
-            e.preventDefault();
-            console.log(e.target);
+        .then(response => response.json())
+        .then(data => renderPost(data))
 
 
-            const titleInput = $('#movieTitle').val();
-            const yearInput = $('#yearMovie').val();
-            const ratingInput = $('#ratingMovie').val();
-            const genreInput = $('#genreMovie').val();
-            const directorInput = $('#directorMovie').val();
-
-            fetch(URL,{
-                method:'POST',
-                body: JSON.stringify({
-                    title:titleInput,
-                    rating:ratingInput,
-                    year:yearInput,
-                    genre:genreInput,
-                    director:directorInput
-                }),
-                headers:{
-                    'Content-Type': 'application/json'
-                }
-            }).then( response => response.json())
-                .then( movie => {
-                    $('#post').append(
-                        `<section class='bg-dark text-white m-3 p-3 h-fit-content' id="mainContainer">
+    //--Create Insert new post with a click of the submit button
+    const submitButton = $('#submitButton')
+    submitButton.click((e)=>{
+        e.preventDefault();
+        alert('Thank you for your response! We will be adding your movie to your list')
+        const titleInput = $('#movieTitle').val();
+        const yearInput = $('#yearMovie').val();
+        const ratingInput = $('#ratingMovie').val();
+        const genreInput = $('#genreMovie').val();
+        const directorInput = $('#directorMovie').val();
+        fetch(URL, {
+            method:'POST',
+            headers:{
+                'Content-Type':'application/json'
+            },
+            body:JSON.stringify({
+                title: titleInput,
+                rating: ratingInput,
+                year: yearInput,
+                genre: genreInput,
+                director: directorInput
+            })
+        }).then( response => response.json())
+            .then( movie => {
+                $('#post').append(
+                    `<section class='bg-dark text-white m-3 p-3 h-fit-content' id="mainContainer">
                         <img src="${movie.poster}" class="rounded">
                         <section class="">
                         <h4 class='pt-3 text-capitalize'>${movie.title}</h4>
@@ -118,83 +114,75 @@
                         <p class='p-0 m-0'>${movie.genre}</p>
                         <p class='p-0 m-0'>${movie.director}</p>
                         <button id="edit" class="btn btn-primary">Edit</button>
-                        <button id="save" class="btn btn-warning D-none">Save</button>
+                        <button id="save" class="btn btn-warning d-none">Save</button>
                         <button id="delete" class="btn btn-secondary">Delete</button>
                     </section>`
-                    )
-                })
-        })
-    }
-    create();
+                )
+            })
+    })
 
-    // $('.btn').on('click', function(e){
-    //     const titleInput = $('#movieTitle').val();
-    //     const yearInput = $('#yearMovie').val();
-    //     const ratingInput = $('#ratingMovie').val();
-    //     const genreInput = $('#genreMovie').val();
-    //     const directorInput = $('#directorMovie').val();
-    //     const targetID = e.target.dataset.id
-    //     const modification = {
-    //         title:titleInput,
-    //         rating:ratingInput,
-    //         year:yearInput,
-    //         genre:genreInput,
-    //         director:directorInput
-    //     }
-    //     const putOptions = {
-    //         method: 'PUT',
-    //         headers: {
-    //             'Content-Type' : 'application/json'
-    //         },
-    //         body: JSON.stringify(modification)
-    //     }
-    //     function getMovies(){
-    //         fetch(URL).then(resp => resp.json()).then(data => console.log(data));
-    //     }
-    //
-    //     fetch(URL + targetId, putOptions).then(getMovies);
-    // })
-    // ----- UPDATE THE INFO
-
+    // //--Delete
     $('#post').click((e)=>{
-        var targetID = e.target.dataset.id
-        console.log(targetID)
         console.log(e);
-        const titleInput = $('#movieTitle').val();
-        const yearInput = $('#yearMovie').val();
-        const ratingInput = $('#ratingMovie').val();
-        const genreInput = $('#genreMovie').val();
-        const directorInput = $('#directorMovie').val();
-        if (e.target.id === 'edit') {
-            console.log('you pressed edit');
-            $(document).find('#edit' ).hide()
-            $(document).find('#save').removeClass('d-none')
-           const modification = {
-                title:titleInput,
-                rating:ratingInput,
-                year:yearInput,
-                genre:genreInput,
-                director:directorInput
-            }
-            const putOptions = {
-                method: 'PUT',
-                headers: {
-                    'Content-Type' : 'application/json'
-                },
-                body: JSON.stringify(modification)
-            }
-            function getMovies(){
-                fetch(URL).then(resp => resp.json()).then(data => console.log(data));
-            }
+        var targetID = e.target.dataset.id
+        let editButtonIsPressed = e.target.id == 'edit-post'
+        let delButtonIsPressed = e.target.id == 'delete-post'
 
-            fetch(URL + "/" + targetId, putOptions).then(getMovies);
+        // Remove Existing Post
+        if(delButtonIsPressed){
+            console.log('Remove Post');
+            fetch(`${URL}/${targetID}`, {
+                method: 'DELETE',
+            })
+                .then(response => response.json())
+                .then(data => location.reload())
         }
-        //----- UPDATE THE INFO
-        else if (e.target.id === 'delete') {
-            console.log(e);
-            console.log('you pressed delete')
+        // Edit Existing Post
+        if(editButtonIsPressed) {
+            $('#saveButton').removeClass('d-none');
+            submitButton.addClass('d-none');
+            // console.log('Edit Post');
+            let parent = e.target.parentElement;
+            // console.log(parent)
+            const TitleContent = parent.querySelector('.movieTitle').textContent;
+            const YearContent = parent.querySelector('.year').textContent;
+            const RatingContent = parent.querySelector('.rating').textContent;
+            const GenreContent = parent.querySelector('.genre').textContent;
+            const directorContent = parent.querySelector('.director').textContent;
+
+            console.log(TitleContent);
+            console.log(YearContent);
+            console.log(RatingContent);
+            console.log(GenreContent);
+            console.log(directorContent);
+
+         let movietitleValue  = $('#movieTitle');
+         let ratingValue  = $('#ratingMovie');
+         let yearValue  =  $('#yearMovie');
+         let genreValue  =  $('#genreMovie');
+         let directorValue  =   $('#directorMovie');
+
+            movietitleValue.value = TitleContent
+            ratingValue.value = YearContent
+            yearValue.value = RatingContent
+            genreValue.value = GenreContent
+            directorValue.value = directorContent
+
+
+            $('#saveButton').click((e)=>{
+                console.log('yay!')
+                submitButton.removeClass('d-none');
+                $('#saveButton').addClass('d-none');
+            })
         }
     })
 
+
+
+
+
 </script>
+</body>
+<!-- Boostrap JS ----->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </html>
