--- a/Movie_application.html
+++ b/Movie_application.html
@@ -53,136 +53,10 @@
     <div id='post' class="d-flex overflow-auto py-5"></div>
 
 
-<script>
-    //--- Special Variables
-    const URL = 'https://cuboid-standing-scribe.glitch.me/movies';
 
-
-    // Creates each post of every movie in the JSON
-    const outPutMovie = '';
-    const renderPost = (posts) => {posts.forEach(movie => {
-        outputMovie = `<section class="bg-dark text-white m-3 p-3 h-fit-content" d id="mainContainer">
-                    <img src="${movie.poster}" class="rounded">\
-                        <h4 class="pt-3 text-capitalize movieTitle">${movie.title}</h4>
-                        <p class="p-0 m-0 movie-header year">${movie.year}</p>
-                        <p class="p-0 m-0 rating">${movie.rating} Stars</p>
-                        <p class="p-0 m-0 genre">${movie.genre}</p>
-                        <p class="p-0 m-0 director">${movie.director}</p>
-                        <button  class="btn btn-primary" data-id=${movie.id} id="edit-post">Edit</button>
-                        <button class="btn btn-secondary" data-id=${movie.id}  id="delete-post">Delete</button>
-            </section>`
-        $('#post').append(outputMovie);
-    })}
-
-    //--- READ ----
-    fetch(URL)
-        .then(response => response.json())
-        .then(data => renderPost(data))
-
-
-    //--Create Insert new post with a click of the submit button
-    const submitButton = $('#submitButton')
-    submitButton.click((e)=>{
-        e.preventDefault();
-        alert('Thank you for your response! We will be adding your movie to your list')
-        const titleInput = $('#movieTitle').val();
-        const yearInput = $('#yearMovie').val();
-        const ratingInput = $('#ratingMovie').val();
-        const genreInput = $('#genreMovie').val();
-        const directorInput = $('#directorMovie').val();
-        fetch(URL, {
-            method:'POST',
-            headers:{
-                'Content-Type':'application/json'
-            },
-            body:JSON.stringify({
-                title: titleInput,
-                rating: ratingInput,
-                year: yearInput,
-                genre: genreInput,
-                director: directorInput
-            })
-        }).then( response => response.json())
-            .then( movie => {
-                $('#post').append(
-                    `<section class='bg-dark text-white m-3 p-3 h-fit-content' id="mainContainer">
-                        <img src="${movie.poster}" class="rounded">
-                        <section class="">
-                        <h4 class='pt-3 text-capitalize'>${movie.title}</h4>
-                        <p class='p-0 m-0'>${movie.year}</p>
-                        <p class='p-0 m-0'>${movie.rating} Stars</p>
-                        <p class='p-0 m-0'>${movie.genre}</p>
-                        <p class='p-0 m-0'>${movie.director}</p>
-                        <button id="edit" class="btn btn-primary">Edit</button>
-                        <button id="save" class="btn btn-warning d-none">Save</button>
-                        <button id="delete" class="btn btn-secondary">Delete</button>
-                    </section>`
-                )
-            })
-    })
-
-    // //--Delete
-    $('#post').click((e)=>{
-        console.log(e);
-        var targetID = e.target.dataset.id
-        let editButtonIsPressed = e.target.id == 'edit-post'
-        let delButtonIsPressed = e.target.id == 'delete-post'
-
-        // Remove Existing Post
-        if(delButtonIsPressed){
-            console.log('Remove Post');
-            fetch(`${URL}/${targetID}`, {
-                method: 'DELETE',
-            })
-                .then(response => response.json())
-                .then(data => location.reload())
-        }
-        // Edit Existing Post
-        if(editButtonIsPressed) {
-            $('#saveButton').removeClass('d-none');
-            submitButton.addClass('d-none');
-            // console.log('Edit Post');
-            let parent = e.target.parentElement;
-            // console.log(parent)
-            const TitleContent = parent.querySelector('.movieTitle').textContent;
-            const YearContent = parent.querySelector('.year').textContent;
-            const RatingContent = parent.querySelector('.rating').textContent;
-            const GenreContent = parent.querySelector('.genre').textContent;
-            const directorContent = parent.querySelector('.director').textContent;
-
-            console.log(TitleContent);
-            console.log(YearContent);
-            console.log(RatingContent);
-            console.log(GenreContent);
-            console.log(directorContent);
-
-         let movietitleValue  = $('#movieTitle');
-         let ratingValue  = $('#ratingMovie');
-         let yearValue  =  $('#yearMovie');
-         let genreValue  =  $('#genreMovie');
-         let directorValue  =   $('#directorMovie');
-
-            movietitleValue.value = TitleContent
-            ratingValue.value = YearContent
-            yearValue.value = RatingContent
-            genreValue.value = GenreContent
-            directorValue.value = directorContent
-
-
-            $('#saveButton').click((e)=>{
-                console.log('yay!')
-                submitButton.removeClass('d-none');
-                $('#saveButton').addClass('d-none');
-            })
-        }
-    })
-
-
-
-
-
-</script>
 </body>
+<!-- Personal JS -->
+<script src="js/Movie_application.js"></script>
 <!-- Boostrap JS ----->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </html>
